charts/05-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api1-svc-service
  namespace: Apiworkloads
spec:
  type: LoadBalancer
  ports:
    - port: 5000
      name: http
      targetPort: 5000
  selector:
    app: api1-svc-npd01
